# whestbench

./: .gitignore  .gitlint  CHALLENGE-CONTEXT.md  CHANGELOG.md  README.md  circuit.py  covprop.py  dashboard.html  estimators.py  evaluate.py  main.py  meanprop.py  pyproject.toml  pytest.ini  setup_cython.py
.agent/workflows/: sanitized-public-sync.md
.aicrowd/: CHALLENGE-CONTEXT.md
.aicrowd/sanitization/: blob-replacements.txt  message-replacements.txt  public-sync-excludes.txt  public-sync-state.example.env  sensitive-paths.txt
.aicrowd/scripts/: public-sync.sh  sanitize-public-history.sh
.codex/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: bump-flopscope.yml  bump-whest.yml  ci.yml  docs-dispatch.yml  pypi-publish.yml
docs/: index.md  release-process.md
docs/concepts/: ground-truth.md  problem-setup.md  scoring-model.md
docs/context/: README.md  agent-first-starter-kit-requirements.md  challenge-brief.md  mvp-technical-snapshot.md  open-questions.md  participant-streaming-estimator-guide.md  python-runtime-refactor-decisions.md  research-sources.md  sagemaker-evaluator-sandbox-notes.md
docs/development/: worktrees-and-cli.md
docs/getting-started/: first-local-run.md  from-problem-to-code.md  install-and-cli-quickstart.md
docs/guides/: datasets.md  example-estimators-and-how-to-run-them.md  how-to-use-circuit-explorer.md  how-to-validate-run-and-package.md  how-to-write-your-own-estimator.md  install-and-cli-quickstart.md  participant-streaming-estimator-guide.md  what-is-the-problem-and-how-is-it-scored.md
docs/how-to/: algorithm-ideas.md  debugging-checklist.md  inspect-circuit-structure.md  inspect-mlp-structure.md  manage-flop-budget.md  parallel-bake.md  performance-tips.md  profile-simulation-backends.md  profile-simulation.md  publish-to-hf-hub.md  use-circuit-explorer.md  use-evaluation-datasets.md  use-network-explorer.md  use-whestbench-explorer.md  validate-run-package.md  write-an-estimator.md
profiling/: Dockerfile  Dockerfile.openblas  README.md  blas_benchmark.py  build_and_push.sh  build_on_ec2.sh  build_torch_openblas.sh  collect_results.py  dashboard_components.js  dashboard_styles.css  entrypoint.sh  generate_dashboard.py  instance_matrix.py  run_benchmarks.py  run_blas_comparison.py  run_helpers.py  setup_infra.sh  teardown_infra.sh  verify_mkl.py
scripts/: run-test-harness.sh  setup-git-hooks.sh
tests/: _legacy_npz.py  conftest.py  helpers.py  test_aicrowd_client.py  test_aicrowd_config.py  test_circuit.py  test_cli.py  test_cli_dataset.py  test_cli_dataset_aliases.py  test_cli_debugger.py  test_cli_fallback.py  test_cli_hf_progress.py  test_cli_login_submit.py  test_cli_non_dataset_progress.py  test_cli_participant_commands.py  test_cli_run_hf.py  test_dataset.py  test_dataset_card_mini_full.py  test_dataset_io_combine.py  test_dataset_io_merge.py  test_dataset_io_read.py  test_dataset_io_readme.py  test_dataset_io_schema.py  test_dataset_io_write.py  test_dataset_loader.py  test_dataset_multi_split_fixture.py  test_dataset_round_trip_cpu.py  test_dataset_round_trip_torch.py  test_dataset_seed_protocol.py  test_dataset_torch.py  test_dataset_v3_fixture.py  test_docs_dispatch_workflow.py  test_docs_quality.py  test_doctor.py  test_domain.py  test_estimators.py  test_estimators_module.py  test_evaluate.py  test_example_estimators.py  test_exhaustive_harness.py  (+49 more)
(+277 files in other folders)
