[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
whestbench = ["templates/*.tmpl"]

[project]
name = "whestbench"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "flopscope @ git+https://github.com/AIcrowd/flopscope.git",
    "plotext",
    "rich",
    "threadpoolctl>=3.0",
    "tqdm",
]

[project.scripts]
whest = "whestbench.cli:main"
whestbench = "whestbench.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
]
server = [
    "flopscope-server @ git+https://github.com/AIcrowd/flopscope.git#subdirectory=flopscope-server",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = [
    "src",
    "tests",
    "main.py",
]
