[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whestbench"]

[project]
name = "whestbench"
version = "0.3.0"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20",
    "faker~=37.0",
    "flopscope>=0.4.1",
    "huggingface_hub>=0.24",
    "jinja2>=3.1",
    "plotext",
    "pyarrow>=14",
    "pyyaml>=6.0",
    "rich",
    "threadpoolctl>=3.0",
    "tqdm",
]

[project.scripts]
whest = "whestbench.cli:main"
whestbench = "whestbench.cli:main"

[project.optional-dependencies]
gpu = ["torch>=2.1"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
]
server = [
    "flopscope-server>=0.4.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = [
    "src",
    "tests",
    "main.py",
]
